--- a/addons/package.json
+++ b/addons/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "text-mask-addons",
-  "version": "3.8.0",
-  "description": "Addons for Text Mask https://github.com/text-mask/text-mask",
+  "name": "text-mask-addons-legacy",
+  "version": "3.9.0",
+  "description": "Addons for Text Mask https://github.com/Gruven/text-mask",
   "main": "dist/textMaskAddons.js",
   "author": "M.K. Safi <msafi@msafi.com>",
   "license": "Unlicense",
   "bugs": {
-    "url": "https://github.com/text-mask/text-mask/issues"
+    "url": "https://github.com/Gruven/text-mask/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/text-mask/text-mask.git"
+    "url": "https://github.com/Gruven/text-mask.git"
   },
-  "homepage": "https://github.com/text-mask/text-mask/tree/master/addons/#readme",
+  "homepage": "https://github.com/Gruven/text-mask/tree/master/addons/#readme",
   "keywords": [
     "text mask",
     "input mask",
