--- a/angular1/package.json
+++ b/angular1/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "angular1-text-mask",
-  "version": "6.1.2",
+  "name": "angular1-text-mask-legacy",
+  "version": "6.2.0",
   "description": "Angular 1 directive for input text masking",
   "main": "dist/angular1TextMask.js",
   "author": "Thomas (@PerfectPixel)",
   "license": "Unlicense",
   "bugs": {
-    "url": "https://github.com/text-mask/text-mask/issues"
+    "url": "https://github.com/Gruven/text-mask/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/text-mask/text-mask.git"
+    "url": "https://github.com/Gruven/text-mask.git"
   }
 }
