--- a/core/package.json
+++ b/core/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "text-mask-core",
-  "version": "5.1.2",
-  "description": "Core of https://github.com/text-mask/text-mask",
+  "name": "text-mask-core-legacy",
+  "version": "5.2.0",
+  "description": "Core of https://github.com/Gruven/text-mask",
   "main": "dist/textMaskCore.js",
   "author": "M.K. Safi <msafi@msafi.com>",
   "license": "Unlicense",
   "bugs": {
-    "url": "https://github.com/text-mask/text-mask/issues"
+    "url": "https://github.com/Gruven/text-mask/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/text-mask/text-mask.git"
+    "url": "https://github.com/Gruven/text-mask.git"
   },
-  "homepage": "https://github.com/text-mask/text-mask/core/#readme",
+  "homepage": "https://github.com/Gruven/text-mask/core/#readme",
   "keywords": [
     "text mask",
     "input mask",
