--- a/vanilla/package.json
+++ b/vanilla/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "vanilla-text-mask",
-  "version": "5.1.1",
+  "name": "vanilla-text-mask-legacy",
+  "version": "5.2.0",
   "description": "JavaScript function that makes input HTML element accept mask pattern",
   "main": "dist/vanillaTextMask.js",
   "author": "M.K. Safi <msafi@msafi.com>",
   "license": "Unlicense",
   "bugs": {
-    "url": "https://github.com/text-mask/text-mask/issues"
+    "url": "https://github.com/Gruven/text-mask/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/text-mask/text-mask.git"
+    "url": "https://github.com/Gruven/text-mask.git"
   },
-  "homepage": "https://github.com/text-mask/text-mask/tree/master/vanilla/#readme",
+  "homepage": "https://github.com/Gruven/text-mask/tree/master/vanilla/#readme",
   "keywords": [
     "text mask",
     "input mask",
