--- a/vue/package.json
+++ b/vue/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "vue-text-mask",
-  "version": "6.1.2",
+  "name": "vue-text-mask-legacy",
+  "version": "6.2.0",
   "description": "Vue component for input masking",
   "main": "dist/vueTextMask.js",
   "author": "Bill Colmbia <hello@billcolumbia.com>",
   "license": "Unlicense",
   "bugs": {
-    "url": "https://github.com/text-mask/text-mask/issues"
+    "url": "https://github.com/Gruven/text-mask/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/text-mask/text-mask.git"
+    "url": "https://github.com/Gruven/text-mask.git"
   },
-  "babel": {
-    "presets": [
-      "env",
-      "stage-0"
-    ]
-  },
-  "homepage": "https://github.com/text-mask/text-mask/tree/master/vue/#readme",
+  "homepage": "https://github.com/Gruven/text-mask/tree/master/vue/#readme",
   "devDependencies": {},
   "keywords": [
     "vue",
