--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
 
-node_js: 
-  - "7"
+node_js:
+  - "14"
 
 install: true
 
 env:
   - SUBPROJECT=ci
-  - SUBPROJECT=angular2:ci
-  - SUBPROJECT=ember:test
+#  - SUBPROJECT=angular2:ci
+#  - SUBPROJECT=ember:test
 
 script:
   - npm run $SUBPROJECT
