--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "enzyme": "^3.11.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
+		"eslint-plugin-import": "^2.25.2",
     "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react": "^7.26.1",
